add: workflow to deploy hugo site

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,6 @@ baseURL = 'https://byuantl.github.io/'
 languageCode = 'en-us'
 title = 'Bowen Yuan'
 theme = 'hugo-book'
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
