--- a/hugo.toml
+++ b/hugo.toml
@@ -23,3 +23,4 @@ disableKinds = ['taxonomy', 'taxonomyTerm']
     BookTheme = 'auto'
     BookSection = '*'
     BookPortableLinks = 'warning'
+    BookFavicon = 'B.png'
