--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,9 @@
 baseURL = 'https://byuantl.github.io/'
 languageCode = 'en-us'
 title = 'Bowen Yuan'
-theme = 'hugo-book'
+theme = ["hugo-embed-pdf-shortcode", "hugo-book"]
+
+enableInlineShortcodes = true
 
 enableEmoji = true
 
