--- a/hugo.toml
+++ b/hugo.toml
@@ -1,10 +1,10 @@
 baseURL = 'https://byuantl.github.io/'
 languageCode = 'en-us'
 title = 'Bowen Yuan'
-theme = ["hugo-embed-pdf-shortcode", "hugo-book"]
+theme = ["hugo-book"]
 
 enableInlineShortcodes = true
-
+disablePathToLower = true
 enableEmoji = true
 
 [caches]
